LoanFlow/force-app/main/default/objects/Decision_Audit__c/Decision_Audit__c.object-meta.xml
<CustomObject>
    <label>Decision Audit</label>
    <pluralLabel>Decision Audits</pluralLabel>
    <nameField>
        <label>Audit Number</label>
        <type>AutoNumber</type>
        <displayFormat>AUD-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>