LoanFlow/force-app/main/default/objects/Decision_Audit__c/fields/Decided_By__c.field-meta.xml
<CustomField>
    <fullName>Decided_By__c</fullName>
    <label>Decided By</label>
    <type>Text</type>
    <length>120</length>
</CustomField>