LoanFlow/force-app/main/default/objects/Decision_Audit__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Text</type>
    <length>40</length>
</CustomField>