LoanFlow/force-app/main/default/objects/Decision_Audit__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <type>Lookup</type>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Decision Audits</relationshipLabel>
    <relationshipName>Decision_Audits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>