LoanFlow/force-app/main/default/objects/Decision_Audit__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <label>Risk Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>